# novationLaunchControl-jackProxy

./: .gitignore  CMakeLists.txt  README.md  jack2-novation-lauch-control-xl.c
cmake/: FindJACK.cmake
src/: novationLaunchControl-jackProxy.cpp
